v0.7.22: doStop port-kill fallback (managed->runtime PID->actuator); reverse-order stop-all; HTTP-first config for Desktop+Code